--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
 }
 
 .whole-page {
@@ -12,7 +13,7 @@
 }
 
 .nav-bar {
-  background-color: rgb(212, 158, 211);
+  background-color: #8E98A1;
   width: 100% !important; 
   height: 10vh;
   display: flex;
@@ -31,7 +32,13 @@ nav {
 }
 
 nav div:hover {
-  color: rgb(64, 3, 62);
+  color: #D4CBC7;
+}
+
+.logo {
+  position: fixed;
+  left: 50px;
+  top: 0px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -40,8 +47,79 @@ nav div:hover {
   }
 }
 
-.card {
-  padding: 2em;
+.whole-page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.feed-functions {
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+
+form {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 30px;
+  width: 60vh;
+}
+
+.post-input {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.feed-posts {
+  width: 100%;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 40px;
+}
+
+
+.post-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  margin: 20px;
+  border-radius:5px;
+}
+
+.post-card {
+  background-color: rgb(255, 255, 255);
+  width: 65%;
+  color: #434b53;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.post-card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.post-view {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+
+}
+
+.post-text {
+  text-align: left;
+}
+
+.like-btn {
+  background-color: #efb1ca ;
 }
 
 .read-the-docs {
