--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Courier New, monospace;
   line-height: 1.5;
   font-weight: 400;
 
@@ -15,11 +15,10 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #D4CBC7;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -28,6 +27,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(245, 233, 220);
 }
 
 h1 {
@@ -40,14 +40,26 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 20px;
+}
+
+input {
+  border: 1px solid transparent;
+  border-color: #445667aa;
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-family: inherit;
+
+
 }
 button:hover {
   border-color: #646cff;
+  background-color: #393c7e88;
 }
 button:focus,
 button:focus-visible {
@@ -60,9 +72,10 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #f2edea;
   }
   button {
-    background-color: #f9f9f9;
+    color: rgb(245, 233, 220);
+    background-color: #ba908b;
   }
 }
