--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,8 @@ nav div:hover {
 
 form {
   background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
   border-radius: 5px;
   padding: 30px;
   width: 60vh;
@@ -108,10 +110,23 @@ form {
 }
 
 .post-view {
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+post-view div {
+  margin-right: 20px;
+}
+
+.pure-post {
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
   padding: 20px;
-
+  margin: 40px;
 }
 
 .post-text {
@@ -121,6 +136,31 @@ form {
 .like-btn {
   background-color: #efb1ca ;
 }
+
+.comment-section {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+  margin: 40px;
+}
+
+.comment-text {
+  text-align: left;
+}
+
+.whole-cmt {
+  border-bottom-style: solid;
+  border-width: 1px;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 5px;
+  padding: 10px;
+  width: 60vh;
+}
+
+
 
 .read-the-docs {
   color: #888;
